third_party/move/move-compiler-v2/tests/uninit-use-checker/uses_before_assign.move
script {
fun main() {
    let x: u64;
    let y: u64;
    let z = x + y;
}
}
